# dotfiles

./: .gitignore  KEYBINDINGS.md  README.md  ROADMAP.md  TMUX_GUIDE.md  install-r-linux.sh  install.sh  test-mermaid.md  test-r-workflow.qmd
.claude/: dotfiles_config_features_roadmap.md  rnvim_issue_492.md  terminal_reference.md
.claude/docs/: marimo-quarto-integration.md
R/: .Renviron  .Rprofile
aerc/: accounts.conf.template  aerc.conf  binds.conf
aerc/stylesets/: catppuccin-mocha  rose-pine
aerospace/: aerospace.toml
aerospace/.config/aerospace/: aerospace.toml
borders/.config/borders/: bordersrc
claude-plugins/r-lsp/: README.md  test.R
claude-plugins/r-lsp/.claude-plugin/: marketplace.json
claude/.claude/: env.sh
direnv/.config/direnv/: direnvrc
docker/: .env  .env.example  Dockerfile.r-dev  compose.yaml  entrypoint.sh  setup-reverse-tunnel.sh
ghostty/: config
ghostty/.config/ghostty/: README.md  config
ghostty/shaders/: README.md  inside-the-matrix.glsl
git/: config
karabiner/: karabiner.json
nvim/: lazy-lock.json
nvim/.config/nvim/: BUGS.md  DEPRECATED.md  README.md  lazy-lock.json
nvim/ftplugin/: markdown.lua  quarto.lua
radian/: profile
sketchybar/: .gitignore  colors.sh
sketchybar/items/: spaces.sh
sketchybar/plugins/: icon_map.sh
templates/: pyproject.toml
templates/python-r-project/: .envrc  pyproject.toml
tmux/: .tmux.conf
zsh/: .p10k.zsh  .stow-local-ignore  .zshrc  aliases.zsh  completion.zsh  functions.zsh  motd.zsh
zsh/functions/: fzf.zsh  rnvimserver.zsh  search_dirs.zsh
(+93 files in other folders)
